tests/ui/extern_fn_abi.stderr
error: explicit ABI on extern function is not supported
 --> tests/ui/extern_fn_abi.rs:4:9
  |
1 | #[cxx::bridge]
  | -------------- in this procedural macro expansion
...
4 |         extern "Java" fn f();
  |         ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
